Test new workflow

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-customer_id="YOUR_CUSTOMER_ID"
+customer_id="YOUR_CUSTOMER_ID_1"
 corpus_ids="YOUR_CORPUS_ID"
 api_key="YOUR_API_KEY"
 title="TITLE OF STREAMLIT"
