Test new workflow

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-customer_id="YOUR_CUSTOMER_ID_1"
+customer_id="YOUR_CUSTOMER_ID"
 corpus_ids="YOUR_CORPUS_ID"
 api_key="YOUR_API_KEY"
 title="TITLE OF STREAMLIT"
 description="DESCRIPTION PLACED UNDER TITLE"
 source_data_desc="THIS COMPLETES THE SENTENCE 'This demo uses Retrieval Augmented Generation to ask questions...' ON THE LEFT TOOLBAR"
-streaming=False
+streaming=True
