--- a/.github/workflows/update_spaces.yaml
+++ b/.github/workflows/update_spaces.yaml
@@ -1,15 +1,13 @@
 name: Update Spaces
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   sync-to-hub:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 0
           lfs: true
