--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -1,8 +1,7 @@
 name: Update Space
+
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   sync-to-hub:
@@ -23,9 +22,14 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
 
-      - name: Push to Hugging Face
+      - name: Fetch changes from origin
+        run: |
+          git fetch origin
+          git reset --soft origin/main
+
+      - name: Push changes to Hugging Face
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           git remote add space https://david-oplatka:$HF_TOKEN@huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git
-          git push space main
+          git push --force-with-lease space main
