--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        space_name: [company-pet-policy, about-mls, shakespeare] # List your Hugging Face space names here
-
+        space_name: [company-pet-policy, about-mls, shakespeare]  # List your Hugging Face space names here
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -24,14 +23,29 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
 
-      - name: Fetch changes from origin
-        run: |
-          git fetch origin
-          git reset --soft origin/main
+      - name: Install huggingface_hub
+        run: pip install huggingface_hub
 
-      - name: Push changes to Hugging Face
+      - name: Login to Hugging Face (store token as a secret)
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          git remote add space https://david-oplatka:$HF_TOKEN@huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git
-          git push --force-with-lease space main
+          echo $HF_TOKEN | huggingface-cli login
+
+      - name: Get Space Name
+        id: get_space_name
+        run: echo ${{ matrix.space_name }}
+
+      - name: Add Hugging Face Space as remote (loop through each space)
+        run: |
+          git remote add ${{ steps.get_space_name.outputs.value }} https://$david-oplatka/$${{ steps.get_space_name.outputs.value }}.git
+          git config --add remote.$ ${{ steps.get_space_name.outputs.value }}.oauth_token ${{ secrets.HF_TOKEN }}
+
+      - name: Get changed files
+        id: changed_files
+        run: |
+          git diff --name-only origin/main HEAD
+
+      - name: Push only changed files (loop through each space)
+        run: |
+          git push ${{ steps.get_space_name.outputs.value }} --prune $(echo ${{ steps.changed_files.outputs.value }})
