--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -26,12 +26,14 @@ jobs:
       - name: Install huggingface_hub
         run: pip install huggingface_hub
 
-      - name: Login to Hugging Face (store token as a secret)
+      - name: Login to Hugging Face (use secret token)
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          echo $HF_TOKEN | huggingface-cli login
-
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          huggingface-cli login --token ${{ secrets.HF_TOKEN }}
+          
       - name: Get Space Name
         id: get_space_name
         run: echo ${{ matrix.space_name }}
