--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -37,7 +37,7 @@ jobs:
         id: changed_files
         run: |
           git fetch origin
-          git diff --name-only origin/main HEAD
+          git diff --name-only HEAD~1 HEAD
 
       - name: Push only changed files (loop through each space)
         run: |
