--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -24,11 +24,12 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
 
-      - name: Get changed files
+      - name: Get and show changed files
         id: changed_files
         run: |
           git fetch origin
-          git diff --name-only HEAD~1 HEAD
+          changed_files=$(git diff --name-only HEAD~1 HEAD)
+          echo "${changed_files}"
 
       - name: Push only changed files (loop through each space)
         env:
