--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           git fetch origin
           updated_files=$(git diff --name-only HEAD~1 HEAD || true)
-          echo "${changed_files}"
+          echo "${updated_files}"
 
       - name: Push only changed files (loop through each space)
         env:
