--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -46,7 +46,7 @@ jobs:
           changed_files="${{ steps.changed_files.outputs.value }}"
           echo "Files to push: $changed_files"
           for file in $changed_files; do
-            git remote add ${{ matrix.space_name }} <https://huggingface.co/spaces/david-oplatka/$>{{ matrix.space_name }}.git
+            git remote add ${{ matrix.space_name }} https://huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git
             git config --add remote.${{ matrix.space_name }}.oauth_token ${{ secrets.HF_TOKEN }}
             git push ${{ matrix.space_name }} main
           done
