--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -34,10 +34,6 @@ jobs:
         run: |
           echo "Changed files:"
           echo "${{ steps.changed_files.outputs.value }}"
-
-      - name: Check Git Status
-        run: |
-          git status
           
       - name: Push changed files to Hugging Face
         env:
@@ -45,7 +41,4 @@ jobs:
         run: |
           changed_files="${{ steps.changed_files.outputs.value }}"
           echo "Files to push: $changed_files"
-          for file in $changed_files; do
-            git remote add space https://david-oplatka:$HF_TOKEN@huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git
-            git push space main
-          done
+          git push https://david-oplatka:$HF_TOKEN@huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git HEAD~1:main
