--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -34,20 +34,23 @@ jobs:
           huggingface-cli login --token $HF_TOKEN
 
       - name: Fetch changes from Hugging Face space
-        run: git fetch ${{ matrix.space_name }}
-
+        run: git fetch https://david-oplatka:$HF_TOKEN@huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git
+        
       - name: Diff changed files
         id: diff_files
         run: |
           git diff --name-only HEAD~1 HEAD || true
 
-      - name: Push only changed files to Hugging Face space
-        if: steps.diff_files.outputs.value != ''
+      - name: Push only changed files
         run: |
-          changed_files=$(echo "${{ steps.diff_files.outputs.value }}")
-          for file in $changed_files; do
-            git checkout ${{ matrix.space_name }}/main -- $file
-            git add $file
-            git commit -m "Update $file in ${{ matrix.space_name }}"
-            git push ${{ matrix.space_name }} HEAD:main
-          done
+          changed_files=$(echo "${{ steps.changed_files.outputs.value }}")
+          if [ -n "$changed_files" ]; then
+            for file in $changed_files; do
+              git checkout https://david-oplatka:$HF_TOKEN@huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git/main -- $file
+              git add $file
+              git commit -m "Update $file in ${{ matrix.space_name }}"
+              git push https://david-oplatka:$HF_TOKEN@huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git HEAD:main
+            done
+          else
+            echo "No changed files to push."
+          fi
