--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -36,8 +36,8 @@ jobs:
       - name: Fetch changes from Hugging Face space
         run: git fetch https://david-oplatka:$HF_TOKEN@huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git
         
-      - name: Diff changed files
-        id: diff_files
+      - name: Get changed files
+        id: changed_files
         run: |
           git diff --name-only HEAD~1 HEAD || true
 
