--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Add remote and configure token
         run: |
           git remote add space_${{ matrix.space_name }} https://huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git
-          git config --global remote.space_${{ matrix.space_name }}.oauth_token $HF_TOKEN
+          git config --global --add remote.space_${{ matrix.space_name }}.oauth_token $HF_TOKEN
 
 
       - name: Fetch changes from Hugging Face space
