--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -35,9 +35,7 @@ jobs:
 
       - name: Add remote and configure token
         run: |
-          git remote add space_${{ matrix.space_name }} https://huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git
-          git config --global --add remote.space_${{ matrix.space_name }}.oauth_token $HF_TOKEN
-
+          git remote add space_${{ matrix.space_name }} https://david-oplatka:$HF_TOKEN@huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git
 
       - name: Fetch changes from Hugging Face space
         run: git fetch space_${{ matrix.space_name }}
