--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -19,6 +19,11 @@ jobs:
           fetch-depth: 0
           lfs: true
 
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          
       - name: Configure Git
         run: |
           git config --global user.email "actions@github.com"
@@ -35,7 +40,14 @@ jobs:
 
       - name: Set Hugging Face Space remote URL
         run: |
-          git remote set-url space_${{ matrix.space_name }} https://david-oplatka:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/david-oplatka/${{ matrix.space_name }}.git
+          REMOTE_NAME=space_${{ matrix.space_name }}
+          REMOTE_URL=git@huggingface.co:spaces/david-oplatka/${{ matrix.space_name }}.git
+          if git remote get-url $REMOTE_NAME; then
+            git remote set-url $REMOTE_NAME $REMOTE_URL
+          else
+            git remote add $REMOTE_NAME $REMOTE_URL
+          fi
+      
       - name: Fetch changes from Hugging Face space
         run: git fetch space_${{ matrix.space_name }}
         
@@ -45,5 +57,5 @@ jobs:
             git checkout space_${{ matrix.space_name }}/main -- $file
             git add $file
             git commit -m "Update $file in ${{ matrix.space_name }}"
-            git push space_${{ matrix.space_name }} HEAD:main
+            git push git@huggingface.co:spaces/david-oplatka/${{ matrix.space_name }}.git HEAD:main
           done
