--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -20,8 +20,7 @@ jobs:
           lfs: true
 
       - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
+        env:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           
       - name: Configure Git
