--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -38,7 +38,7 @@ jobs:
           REMOTE_NAME=space_${{ matrix.space_name }}
           REMOTE_URL=git@hf.co:spaces/david-oplatka/${{ matrix.space_name }}.git
           echo "Adding remote: $REMOTE_NAME with URL: $REMOTE_URL"
-          if git remote get-url $REMOTE_NAME; then
+          if git remote | grep -q $REMOTE_NAME; then
             git remote set-url $REMOTE_NAME $REMOTE_URL
           else
             git remote add $REMOTE_NAME $REMOTE_URL
