Change Streaming Default to False

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ api_key="YOUR_API_KEY"
 title="TITLE OF STREAMLIT"
 description="DESCRIPTION PLACED UNDER TITLE"
 source_data_desc="THIS COMPLETES THE SENTENCE 'This demo uses Retrieval Augmented Generation to ask questions...' ON THE LEFT TOOLBAR"
-streaming=True
+streaming=False
