--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -1,70 +1,48 @@
-name: Update Hugging Face Space
+name: Sync and Push to Hugging Face
 
 on:
   push:
     branches:
-      - main
+      - main  # Trigger the workflow on push to the main branch
 
 jobs:
-  sync-to-hub:
+  sync-and-push:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         space_name: [company-pet-policy, about-mls, shakespeare]  # List your Hugging Face space names here
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Source Repository
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0
-          lfs: true
+          repository: your-github-username/source-repo
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up SSH
+      - name: Set up SSH for Hugging Face
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Configure SSH known hosts
+      - name: Configure SSH known hosts for Hugging Face
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan hf.co >> ~/.ssh/known_hosts
-      
-      - name: Configure Git
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
 
-      - name: Install huggingface_hub
-        run: pip install huggingface_hub
-
-      - name: Login to Hugging Face (use secret token)
-        env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+      - name: Clone Target Hugging Face Repository
         run: |
-          huggingface-cli login --token $HF_TOKEN
+          git clone git@hf.co:spaces/david-oplatka/${{ matrix.space_name }}.git tmp-folder-${{ matrix.space_name }}
+          cd tmp-folder-${{ matrix.space_name }}
+          git checkout main
 
-      - name: Set Hugging Face Space remote URL
+      - name: Sync Source Repository with Temporary Folder
         run: |
-          REMOTE_NAME=space_${{ matrix.space_name }}
-          REMOTE_URL=git@hf.co:spaces/david-oplatka/${{ matrix.space_name }}.git
-          echo "Adding remote: $REMOTE_NAME with URL: $REMOTE_URL"
-          if git remote | grep -q $REMOTE_NAME; then
-            git remote set-url $REMOTE_NAME $REMOTE_URL
-          else
-            git remote add $REMOTE_NAME $REMOTE_URL
-          fi
+          rsync -av --exclude '.git' ./source-repo/ ./tmp-folder-${{ matrix.space_name }}/
+          cd tmp-folder-${{ matrix.space_name }}
+          git add .
+          git commit -m "Sync updates from source repository"
 
-      - name: Show Remote connections
-        run: git remote -v
-      
-      - name: Fetch changes from Hugging Face space
-        run: git fetch space_${{ matrix.space_name }}
-        
-      - name: Push only changed files
+      - name: Push changes to Hugging Face Space
         run: |
-          for file in $(git diff --name-only HEAD~1 HEAD); do
-            git checkout space_${{ matrix.space_name }}/main -- $file
-            git add $file
-            git commit -m "Update $file in ${{ matrix.space_name }}"
-            git push git@hf.co:spaces/david-oplatka/${{ matrix.space_name }}.git HEAD:main
-          done
+          git push git@hf.co:spaces/david-oplatka/${{ matrix.space_name }}.git main
