--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ corpus_ids="YOUR_CORPUS_ID"
 api_key="YOUR_API_KEY"
 title="TITLE OF STREAMLIT"
 description="DESCRIPTION PLACED UNDER TITLE"
-source_data_desc="COMPLETE THE SENTENCE 'This demo uses Retrieval Augmented Generation to ask questions...' ON THE LEFT TOOLBAR"
+source_data_desc="DESCRIPTION COMPLETES THE SENTENCE 'This demo uses Retrieval Augmented Generation to ask questions...' ON THE LEFT TOOLBAR"
 streaming=False
