--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -52,6 +52,17 @@ jobs:
           ls -l $RUNNER_TEMP/custom-temp-directory/tmp-folder-${{ matrix.space_name }}
           cat $RUNNER_TEMP/custom-temp-directory/tmp-folder-${{ matrix.space_name }}/README.md || echo "README.md not found in temporary directory"
 
+      - name: Identify Changed Files
+        id: changed-files
+        run: |
+          cd $GITHUB_WORKSPACE
+          git diff --name-only HEAD~1  # Compare with the last commit
+
+      - name: Copy Changed Files to Temporary Directory
+        run: |
+          cd $RUNNER_TEMP/custom-temp-directory/tmp-folder-${{ matrix.space_name }}
+          xargs -I {} cp -f --parents $GITHUB_WORKSPACE/{} . < <(echo "${{ steps.changed-files.outputs.stdout }}")
+      
       - name: Sync Source Repository with Temporary Folder
         run: |
           cd $RUNNER_TEMP/custom-temp-directory/tmp-folder-${{ matrix.space_name }}
@@ -71,4 +82,4 @@ jobs:
           HF_ACCESS_TOKEN: ${{ secrets.HF_TOKEN }}  # Replace with your actual secret name
         run: |
           cd $RUNNER_TEMP/custom-temp-directory/tmp-folder-${{ matrix.space_name }}
-          git push -f git@hf.co:spaces/david-oplatka/${{ matrix.space_name }}.git main
+          git push git@hf.co:spaces/david-oplatka/${{ matrix.space_name }}.git main
