--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -20,10 +20,6 @@ jobs:
           repository: david-oplatka/chatbot-streamlit
           token: ${{ secrets.GITHUB_TOKEN }}
           
-      - name: Print Source Directory Contents
-        run: |
-          ls -l
-
       - name: Set up SSH for Hugging Face
         uses: webfactory/ssh-agent@v0.5.3
         with:
@@ -40,12 +36,13 @@ jobs:
 
       - name: Check Working directories
         run: |
-          ls -lR /home/runner/
+          ls -lR /home/runner/work
       
       - name: Sync Source Repository with Temporary Folder
         run: |
           pwd
-          rsync -av --exclude '.*' $GITHUB_WORKSPACE/* $RUNNER_TEMP/spaces/folder-${{ matrix.space_name }}/
+          ls -lR $GITHUB_WORKSPACE
+          rsync -av --exclude '.*' $GITHUB_WORKSPACE/* $RUNNER_TEMP/spaces/folder-${{ matrix.space_name }}
           cd $RUNNER_TEMP/spaces/folder-${{ matrix.space_name }}
           pwd
           git status
